--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+RapidFuzz==3.12.2
 seaborn==0.13.2
 six==1.17.0
+thefuzz==0.22.1
 tzdata==2025.1
 Werkzeug==3.1.3
