--- a/.github/workflows/restart_docker.yaml
+++ b/.github/workflows/restart_docker.yaml
@@ -13,16 +13,19 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
+
       - name: Write SSH private key to file
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/private_key.pem
           chmod 600 /tmp/private_key.pem
-        
+
       - name: Restart Docker container
         run: |
-          ssh -i /tmp/private_key.pem -o StrictHostKeyChecking=no -p ${{ secrets.SSH_SERVER_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }} 'docker compose up --build -d acnh_fish_site'
-        
+          ssh -i /tmp/private_key.pem \
+            -o StrictHostKeyChecking=no \
+            -p ${{ secrets.SSH_SERVER_PORT }} \
+            ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }} \
+            'docker compose up --build -d acnh_fish_site'
       - name: Clean up SSH private key
         run: |
           rm /tmp/private_key.pem
