--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -49,5 +49,6 @@ jobs:
             -e VALIDATE_PYTHON_BLACK=false \
             -e VALIDATE_ALL_CODEBASE=false \
             -e DEFAULT_BRANCH=main \
+            -e GITHUB_SHA=${{ github.sha }} \
             -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
             github/super-linter:v4
