--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -16,42 +16,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Cache Docker images
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.docker-cache
-          key: docker-${{ runner.os }}-super-linter
-          restore-keys: |
-            docker-${{ runner.os }}-
-
-      - name: Load cached Docker image
-        run: |
-          if [ -f "/tmp/.docker-cache/super-linter.tar" ]; then
-            docker load -i /tmp/.docker-cache/super-linter.tar
-          fi
-
-      - name: Pull Super Linter (if not cached)
-        run: |
-          if ! docker image inspect github/super-linter:v4 >/dev/null 2>&1; then
-            docker pull github/super-linter:v4
-            mkdir -p /tmp/.docker-cache
-            docker save github/super-linter:v4 -o /tmp/.docker-cache/super-linter.tar
-          fi
-
-      - name: Run Super Linter
+      - name: Lint Code Base
+        uses: github/super-linter@v4
         env:
           VALIDATE_PYTHON_BLACK: false
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: "main"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker run --rm \
-            -e VALIDATE_PYTHON_BLACK=false \
-            -e VALIDATE_ALL_CODEBASE=false \
-            -e DEFAULT_BRANCH=main \
-            -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
-            -e GITHUB_SHA=${{ github.sha }} \
-            -e GITHUB_REPOSITORY=${{ github.repository }} \
-            -v "${{ github.workspace }}:/tmp/lint" \
-            -w /tmp/lint \
-            github/super-linter:v4
