--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.9.0
 click==8.1.8
 contourpy==1.3.1
 cycler==0.12.1
+dotenv==0.9.9
 Flask==3.1.0
 fonttools==4.56.0
 itsdangerous==2.2.0
@@ -15,6 +16,7 @@ pandas==2.2.3
 pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.1
 RapidFuzz==3.12.2
 seaborn==0.13.2
