--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.13"]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -22,4 +22,4 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          PYTHONPATH=src pylint "$(git ls-files '*.py')"
+          PYTHONPATH=. pylint $(git ls-files '*.py')
