--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -21,5 +21,7 @@ jobs:
         env:
           VALIDATE_PYTHON_BLACK: false
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_YAML: false
+          VALIDATE_YAML_PRETTIER: false
           DEFAULT_BRANCH: "main"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
