--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4
         env:
-          FILTER_REGEX_EXCLUDE: "README.md"
+          FILTER_REGEX_EXCLUDE: "(README.md|\\.github/.*)"
           VALIDATE_PYTHON_BLACK: false
           VALIDATE_PYTHON_ISORT: false
           VALIDATE_ALL_CODEBASE: false
