Updated workflows to only run when core files are editted

--- a/.github/workflows/sftp.yaml
+++ b/.github/workflows/sftp.yaml
@@ -4,6 +4,14 @@ name: CI-SFTP
 on:
   push:
     branches: [main]
+    paths:
+      - 'src/**'
+      - 'static/**'
+      - 'templates/**'
+      - 'data/**'
+      - 'docker-compose.yaml'
+      - 'Dockerfile'
+
 
   workflow_dispatch:
 
