--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -1,7 +1,11 @@
 ---
 name: Pylint
 
-on: [push]
+on:
+  push:
+    branches: [main]
+    paths:
+      - '**/.py'
 
 permissions:
   contents: read
