--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,70 @@
+babel==2.17.0
+backrefs==5.8
+bidict==0.23.1
 blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 dotenv==0.9.9
 Flask==3.1.0
 flask-cors==5.0.1
+Flask-SocketIO==5.5.1
 fonttools==4.56.0
+ghp-import==2.1.0
+griffe==1.6.0
+h11==0.14.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 kiwisolver==1.4.8
+Markdown==3.7
 MarkupSafe==3.0.2
 matplotlib==3.10.1
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-autorefs==1.4.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.6.8
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.29.0
+mkdocstrings-python==1.16.5
 numpy==2.2.3
 packaging==24.2
+paginate==0.5.7
 pandas==2.2.3
+pandas-stubs==2.2.3.250308
+pathspec==0.12.1
 pillow==11.1.0
+platformdirs==4.3.6
+Pygments==2.19.1
+pymdown-extensions==10.14.3
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-engineio==4.11.2
+python-socketio==5.12.1
 pytz==2025.1
+PyYAML==6.0.2
+pyyaml_env_tag==0.1
 RapidFuzz==3.12.2
+requests==2.32.3
 seaborn==0.13.2
+simple-websocket==1.1.0
 six==1.17.0
 thefuzz==0.22.1
+types-click==7.1.8
+types-Flask==1.1.6
+types-Flask-Cors==5.0.0.20240902
+types-Jinja2==2.11.9
+types-MarkupSafe==1.1.10
+types-pytz==2025.1.0.20250204
+types-seaborn==0.13.2.20250111
+types-Werkzeug==1.0.9
 tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
 Werkzeug==3.1.3
+wsproto==1.2.0
