--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,4 +72,4 @@ extra:
       link: https://www.linkedin.com/in/mehraza/
 
 copyright: |
-  &copy; 2024 <a href="https://creativecommons.org/licenses/by-nc-nd/4.0"  target="_blank" rel="noopener">CC BY-NC-ND 4.0</a>
+  &copy; 2025 <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener">CC BY 4.0</a>
